2004-01-17 23:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewEditor.[hm]: Addition of selection and makeSelectionVisible
	methods to allow views to exist within a scrollview without a
	containing NSView. 
	* GormViewWithContentViewEditor.m: Changed code in 
	groupSelectionInScrollView to not insert a NSView to contain the 
	subview being grouped in the case where there is only one
	view selected.   These fixes correct Report#6890.
		
2004-01-14 10:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added submenuAction: to the NSMenu
	class.
	
2004-01-14 01:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: attachObject:toParent: when the connection
	contained in the object which is attached is nil, use the 
	parent.   This corrects a minor issue with greyed out menu entries.
	
2004-01-11 13:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed awakeFromDocument code and moved it to
	Gorm.m so that awakeFromDocument is called after all initialization is
	done.
	* Gorm.m: Added loop in open: to awake all objects in the nametable
	after loading.
	* Palettes/0Menus/GSMenuInspectors.m: Added code to close all of
	the uneeded menus upon loading.  This corrects Report #6467.
	
2004-01-06 01:12 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument attachObject:] added logic
	to automatically add predefined connections to the connectors
	array so that they can be manipulated in Gorm.  If a palette
	defines the destination to be the First Responder, 
	and the label to be "orderFrontStandardInfoPanel:" then this
	will be reflected in the connections inspector.
	* GormLib/IBConnectors.h: Made the comments into documentation
	style comments so, if/when I start using gsdoc to document the
	innerworkings of Gorm, it will be ready.
	
2004-01-04 22:39 Gregory John Casamento <greg_casamento@yahoo.com>
