@@ -1,3 +1,7 @@
+2004-01-20 08:53 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormViewWithContentViewEditor.m: Backing out previous change.
+	
 2004-01-17 23:07 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormViewEditor.[hm]: Addition of selection and makeSelectionVisible
